--- a/ToDoList/styles.css
+++ b/ToDoList/styles.css
@@ -1,66 +1,121 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
-
-:root{
-    font-size: 50%;
-    
-}
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: 'Poor Story', cursive;
+
 }
 
+html{
+    height: 100%;
+}
 
 body{
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 90vh;
-    font-family: 'Roboto', sans-serif;
-
 }
 
 .todolist{
-    font-size: 2rem;
-    height: 62rem;
-    border: 2px solid black;
-    border-radius: 2rem;
-    padding: 5rem;
-    padding-top: 2rem;
-    background-color: white;
+    width: 80%;
+    max-width: 720px;
+    height: 80%;
+    padding: 2rem;
+}
+.todolist__inner{
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
 }
 
-.todolist__title{
-    font-size: 5rem;
+.header{
+    padding: 1rem;
+    font-size: 1.5rem;
+}
+
+.inputcontainer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid black;
+    height: 2.5rem;
+    width:100%;
+    border-radius: 2.5rem;
+    position: relative;
+}
+
+.taskinput {
+    border: none;
+    width: 75%;
+    height: 75%;
+    font-size: 1.5rem;
+    outline: none;
     text-align: center;
 }
 
-.listcontainer {
-    border: 1px dotted black;
-    border-radius: 1rem;
-    height: 45rem;
-    margin-top: 1rem ;
-    font-size: 2rem;
-    padding: 1rem 1rem;
+.taskinput::placeholder{
+    color: #00000023;
+}
+
+.addbutton{
+    position: absolute;
+    right: 5%;
+    cursor: pointer;
+}
+
+.taskbox{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 75%;
     gap: 1rem;
-    
-}
-
-.taskcontainer {
-    display: flex;
-    justify-content: space-between;
-}
-
-.todolist__footer {
     padding: 1rem;
 }
+.taskbox__element{
+    border: 1px solid black;
+    border-radius: 2.5rem;
+    width: 100%;
+    height: 2.5rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
-@media screen and (max-width: 720px){
-    :root{
-        font-size: 50%;
+.taskoutput {
+    border: none;
+    height: 50%;
+    width: 60%;
+    font-size: 1.5rem;
+    outline: none;
+}
+
+.editbutton, .deletebutton{
+    cursor: pointer;
+}
+
+@media (max-width:420px){
+
+    .taskinput{
+        font-size: 1.2rem;
     }
-    
+
+    .taskoutput{
+        font-size: 1.2rem;
+    }
+
+    .addbutton, .editbutton, .deletebutton {
+        font-size: .65rem;
+        font-weight: 400;
+    }
+
+    .checkbox {
+        scale: .65;
+    }
 }
