--- a/ExpenseTracker/styles.css
+++ b/ExpenseTracker/styles.css
@@ -62,10 +62,20 @@ input{
     flex-grow: 1;
 }
 
+.body{
+    height: 90%;
+    display: flex;
+    align-items: flex-start;
+    padding: 1rem;
+    overflow: auto;
+}
+
 .mainTable{
     flex-grow: 1;
     border: 1px solid black;
     padding: 1rem;
+
+    overflow: scroll;
 }
 
 th, td {
@@ -73,8 +83,9 @@ th, td {
     border-bottom: 1px solid black;
 }
 
-.emptyHeading, .actionButton{
+.emptyHeading, .deleteData{
     text-align: center;
+    border: none;
 }
 
 @media (max-width: 625px){
