--- a/MyWebsite/style.css
+++ b/MyWebsite/style.css
@@ -1,73 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&family=Roboto+Condensed&display=swap');
-
-
 :root {
-  --color-one: #17252A;
-  --color-two: #2B7A78;
-  --color-three: #3AAFA9;
-  --color-four: #DEF2F1;
-  --color-five: #FEFFFF;
-  font-family: 'Roboto Condensed', sans-serif;
-
+  font-size: 16px;
+  font-family: 'Open Sans';
+  --text-primary: #b6b6b6;
+  --text-secondary: #ececec;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418;
+  --transition-speed: 600ms;
 }
 
-body{
-  background-color: var(--color-three);
+body {
+  color: black;
+  background-color: rgb(23, 23, 23);
   margin: 0;
   padding: 0;
 }
 
-.navBar{
-  background-color: var(--color-two);
-  height: 100vh;
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
+
+main {
+  margin-left: 5rem;
+  padding: 1rem;
+}
+
+.navBar {
   position: fixed;
-  transition: ease-in-out .2s;
-  width:5%;
+  background-color: var(--bg-primary);
+  transition: width 600ms ease;
+  overflow: scroll;
+  height: 100vh;
+  width: 5rem;
+  transition: width ease-in .2s;
 }
 
-.navigation{
-  margin: 0;
-  padding: 0;
+.navMain {
   list-style: none;
+  padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-  height: 100%;
-  width: 100%;
-}
-
-.navList{
-
-  width: 100%;
-  margin: 1.5rem 1rem;
-}
-
-.navList svg{
-  width: 2.5rem;
-}
-
-.navLink {
-  text-decoration: none;
-  color: #17252A;
-  display: flex;
   align-items: center;
+  height: 100%;
+}
+
+.navList {
   width: 100%;
 }
 
-.navLink span{
-  display: none;
-  margin-left: auto;
-  margin-right: auto;
-}
-.navList:last-child{
+.navList:last-child {
   margin-top: auto;
 }
 
-.navBar:hover{
-  width: 20%;
+.navLink {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  color: var(--text-primary);
+  text-decoration: none;
+  filter: grayscale(100%) opacity(0.7);
+  transition: var(--transition-speed);
 }
 
-.navBar:hover span{
-  display: block;
+.navLink:hover {
+  filter: grayscale(0%) opacity(1);
+  background: var(--bg-secondary);
+  color: var(--text-secondary);
+}
+
+.navText {
+  display: none;
+  margin-left: 1rem;
+}
+
+.navLink svg {
+  width: 2rem;
+  min-width: 2rem;
+  margin: 0 1.5rem;
+}
+
+.navBar:hover{
+  width: 16rem;
+}
+
+.navBar:hover span {
+  display: inline;
 }
