--- a/MyWebsite/style.css
+++ b/MyWebsite/style.css
@@ -40,6 +40,7 @@ main {
   height: 100vh;
   width: 5rem;
   transition: width ease-in .2s;
+  z-index: 100;
 }
 
 .navMain {
@@ -89,6 +90,25 @@ main {
   margin: 0 1.5rem;
 }
 
+.main {
+  background-color: #1c1c26;
+  margin-left: 5rem;
+  height: 100vh;
+}
+
+.header{
+display: flex;
+justify-content: center;
+}
+
+.brandLogo{
+  font-size: 2.5rem;
+  padding: 1rem 0;
+  margin: 0 0 0 0;
+  color: var(--text-primary);
+  filter: grayscale(100%) opacity(0.7);
+}
+
 
 
 
@@ -111,7 +131,7 @@ main {
     justify-content: center;
   }
 
-  main {
+  .main {
     margin: 0;
   }
 }
