--- a/MyWebsite/style.css
+++ b/MyWebsite/style.css
@@ -6,6 +6,7 @@
   --bg-primary: #23232e;
   --bg-secondary: #141418;
   --transition-speed: 600ms;
+  --bg-alternative: #6649b8;
 }
 
 body {
@@ -73,7 +74,7 @@ main {
 
 .navLink:hover {
   filter: grayscale(0%) opacity(1);
-  background: var(--bg-secondary);
+  background: var(--bg-alternative);
   color: var(--text-secondary);
 }
 
@@ -94,6 +95,9 @@ main {
   background-color: #1c1c26;
   margin-left: 5rem;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .header{
@@ -103,16 +107,59 @@ justify-content: center;
 
 .brandLogo{
   font-size: 2.5rem;
-  padding: 1rem 0;
+  padding: 2rem 0;
   margin: 0 0 0 0;
-  color: var(--text-primary);
-  filter: grayscale(100%) opacity(0.7);
+  color: var(--text-secondary);
+  transition: color ease-in-out .25s;
+
 }
 
+.brandLogo:hover{
+  color: var(--bg-alternative);
+}
 
+.aboutMe{
+  color: var(--text-secondary);
+  filter: grayscale(100%) opacity(0.7);
+  padding: 10%;
+  display: flex;
+  gap: 1rem;
+  background-color: var(--bg-alternative);
+  border-radius: 2rem;
+  transition: filter ease-in-out .25s;
+}
 
+.aboutMe:hover{
+  filter: grayscale(0%) opacity(0.7);
+}
 
-@media only screen and (max-width: 600px) {
+.profileImageWrapper{
+  display: flex;
+  align-items: center;
+}
+
+.profileImage{
+  width: 15rem;
+  height: 15rem;
+  border-radius: 5rem;
+  margin: 1rem;
+}
+
+.aboutWrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem 0;
+}
+.aboutWrapper p{
+  text-align: justify;
+}
+
+h2{
+  margin: 0;
+}
+
+@media only screen and (max-width: 720px) {
   .navBar {
     bottom: 0;
     width: 100vw;
@@ -134,9 +181,19 @@ justify-content: center;
   .main {
     margin: 0;
   }
+
+  .aboutMe{
+    flex-direction: column;
+    align-items: center;
+    max-width: 480px;
+    gap: 0;
+  }
+  .aboutWrapper{
+    align-items: center;
+  }
 }
 
-@media only screen and (min-width: 600px){
+@media only screen and (min-width: 720px){
 
   .navBar:hover{
     width: 16rem;
