--- a/MyWebsite02/style.css
+++ b/MyWebsite02/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap');
 
 :root{
     font-family: 'Ubuntu', sans-serif;
@@ -19,6 +19,9 @@ body{
     align-items: center;
     filter: grayscale(50%) opacity(.7);
     background-color: rgba(0, 0, 0, 0.085);
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .navWrapper{
@@ -48,6 +51,32 @@ body{
 }
 svg{
     height: 1.5rem;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    background: radial-gradient(#e66465, #9198e5);
+}
+
+.mainBanner{
+    text-align: center;
+    padding: 5rem 2.5rem;
+}
+
+.mainBanner h1 {
+    filter: grayscale(50%) opacity(.7);
+    font-size: 2rem;
+    padding: 2.5rem;
+    font-weight: 700;
+}
+
+.digButton a{
+    filter: grayscale(50%) opacity(.7);
+    border: 2px solid black;
+    padding: 1rem;
 }
 
 @media (max-width:400px){
