--- a/TripCountdownTimer/style.css
+++ b/TripCountdownTimer/style.css
@@ -35,6 +35,10 @@ header{
 }
 .main{
     padding-bottom: 15%;
+    border: 5px solid black;
+    border-radius: 1rem;
+    padding: 2rem;
+    text-shadow: 0 0 .25rem rgba(255, 255, 255, 0.565);
 }
 
 body{
