--- a/ParallaxEffect/style.css
+++ b/ParallaxEffect/style.css
@@ -29,7 +29,7 @@
 
     font-family: 'Noto Sans JP', sans-serif;
 
-    font-size: 200%;
+    font-size: 180%;
 }
 
 html{
@@ -71,6 +71,41 @@ body::-webkit-scrollbar {
     animation: moveBackground 2s infinite alternate;
 }
 
+.navBar{
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    box-sizing: border-box;
+    padding:  0.5rem;
+}
+
+.header h1{
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+}
+
+.navList{
+    font-size: 0.75rem;
+    gap: 1rem;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.navList a {
+    text-decoration: 0;
+    color: rgba(0, 0, 0, 0.499);
+}
+
+.toggleMenu {
+
+}
+
 .secondaryBackground{
     height: 100vh;
     display: flex;
@@ -103,6 +138,11 @@ h1{
     color: rgba(0, 0, 0, 0.372)
 }
 
+svg {
+    display: block;
+}
+
+
 @keyframes moveBackground {
     0% {
         background-position: bottom left;
@@ -113,8 +153,23 @@ h1{
     }
 }
 
-@media (max-width:420px){
+@keyframes display {
+    0% {    opacity: 0;}
+    100% {opacity: 1;}
+}
+
+@media (max-width:780px){
     :root{
         font-size: 120%;
     }
+
+    svg{
+        fill-opacity: 0.5;
+        height: 1rem;
+    }
+
+    .navList{
+        display: none;
+    }
+
 }
