--- a/MyWebsite02/style.css
+++ b/MyWebsite02/style.css
@@ -9,36 +9,150 @@
     box-sizing: border-box;
 }
 
-body{
-    box-sizing: border-box;
-}
 .head{
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    overflow-x: hidden;
+    position: fixed;
+    width: 100%;
+    padding: 0.5rem 1rem;
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .logoBar{
-    margin: 0.5rem 1rem;
     font-size: .8rem;
 }
 
-svg{
+.navBar svg{
     width: 1rem;
 }
 
-.navBar{
-    margin-left: auto;
-}
-
 .navList{
-
-    box-sizing: border-box;
     display: flex;
-    justify-content: flex-end;
-    margin: 0.5rem 1rem;
-    list-style: 0;
     gap: 1rem;
     list-style: none;
+    align-items: center;
+    gap: 2rem;
+    
 }
 
+.menuBar{
+    display: none;
+}
+
+.socialIcons {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    fill: white;
+}
+
+.socialIcons svg {
+    width: 1.5rem;
+}
+
+
+.bounceAnim{
+    animation: bounceAnim 0.5s;
+}
+
+.bounceAnimTwo{
+    animation: bounceAnimTwo 0.5s;
+}
+
+
+main{
+    height: 100vh;
+}
+
+section {
+    height: 100%;
+}
+
+@keyframes bounceAnim {
+    0%{
+        transform: translateY(0rem);
+    }
+
+    50% {
+        transform: translateY(-.5rem);
+    }
+
+    100%{
+        transform: translateY(0rem);
+    }
+}
+
+@keyframes bounceAnimTwo {
+
+    0%{
+        transform: translateY(0rem);
+    }
+
+    50% {
+        transform: translateY(-.5rem);
+    }
+
+    100%{
+        transform: translateY(0rem);
+    }
+}
                 
+@media (max-width:600px){
+
+    .navBar{
+        position: fixed;
+        height: 100vh;
+        padding: 0 2.5rem;
+        top: 0;
+        background-color: rgba(0, 0, 0, 0.184);
+        transition: ease-out 0.5s;
+    }
+    
+    .navList{
+        padding-top: 5rem;
+        padding-bottom: 2rem;
+        display: flex;
+        margin: 0.5rem 1rem;
+        list-style: 0;
+        gap: 1rem;
+        list-style: none;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        color: black;
+        height: 100%;
+        z-index: 1;
+        
+    }
+
+    .socials{
+        margin-top: auto;
+    }
+    .socialIcons{
+        fill: black;
+    }
+
+
+    .navBar{
+        right: -20rem;
+    }
+
+    .menuBar svg {
+        width: 1rem;
+        fill: white;
+
+    }
+    
+    .menuBar{
+        display: block;
+        position: absolute;
+        right: 1rem;
+        top: 40%;
+        margin-right: 1rem;
+    }
+
+}
